# LiveVerkeersinfo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.example.yml  docker-compose.yml  plan.md  pyproject.toml
docs/: 01-traffic-realtime.md  02-signs-vms.md  03-roadworks-measures.md  04-charging.md  05-truckparking.md  06-verkeersborden.md  07-static-reference.md  08-nwb-road-network.md  09-performance.md  10-carriageway-direction-quality.md  10-osm-speed-poc.md  11-osm-pbf.md  11-osm-production-backlog.md  12-anwb-incidents.md  12-osm-speed-validation.md  12-road-matching-benchmark.md  13-flitspalen-speedcameras.md  13-validated-driving-core.md  14-osm-lane-topology.md  15-canonical-segment-state.md  16-driver-validation-audit.md  17-speed-coverage-iteration.md  18-open-source-field-audit.md  19-vild-primary-direction-architecture.md  README.md
migrations/: README  env.py  script.py.mako
scripts/: benchmark_matching.py
tests/: test_charging_ingest.py  test_drip_carriageway.py  test_effective_road.py  test_live_object_binding.py  test_measurement_site_metadata.py  test_nwb.py  test_osm_graph.py  test_osm_graph_query.py  test_osm_junctions.py  test_osm_lane_state.py  test_osm_lanes.py  test_osm_matching_benchmark.py  test_osm_poc.py  test_osm_roads.py  test_osm_shadow_import.py  test_osm_speed_model.py  test_parsers.py  test_poller_scheduler.py  test_roads_corridor.py  test_roads_live_facts.py  test_situation_parsing.py  test_source_binding.py  test_traffic_matching.py  test_trafficspeed_ingest.py  test_trafficspeed_quality_parser.py  test_vild_direction.py  test_weggeg.py
web/: app.js  canonical-segment-state.js  config.js  drive.html  drive.js  fetch.js  gps.js  hectometers.js  hud.js  index.html  lane-topology.js  lib.js  manifest.json  map.js  matrix.js  osm-poc.js  ui.js  (+5 more)
(+112 files in other folders)
