[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ndwinfo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2",
    "geoalchemy2",
    "psycopg[binary]",
    "pydantic-settings",
    "alembic",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn[standard]",
]
ingest = [
    "httpx",
    "shapely>=2",
    "pyproj",
    "lxml",
    "ijson",
    "pyogrio",
    "geopandas",
]
dev = [
    "fastapi",
    "uvicorn[standard]",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres]",
    "httpx",
    "lxml",
    "ijson",
    "pyogrio",
    "geopandas",
    "shapely>=2",
    "pyproj",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
